# Human-Robot-Interaction

./: README.md
human-robot-gym-deployment/: .gitignore  PPO_failsafe_cost_agent.py  README.md  agent_ss23_hydra2.py  agent_ss23_reflex_hydra.py  demo_agent.py  demo_agent_with_threading.py  demo_agent_with_threading_only_points.py  demo_capsule_plotting.py  demo_capsule_plotting_fixed.py  deployment_RL_agent_ss23.py  receive_udp_packets.py  rviz_visualizer.py  test_demo.py  utils.py
human-robot-gym-deployment/communi_cat/: agent_cat.py  client_cat.py  config.yaml  logging_helper.py  udp_data.py
human-robot-gym-deployment/configs/: right_left.json  schunk_ppo_parallel_failsafe_cost_ss23.json  schunk_sac_her_safe.json  schunk_sac_her_safe_right_left.json
human-robot-gym-deployment/outputs/2023-05-18/22-16-56/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-22-53/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-23-59/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-32-27/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-34-47/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-35-24/.hydra/: config.yaml  hydra.yaml
human-robot-gym-deployment/outputs/2023-05-18/22-36-03/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/13-54-54/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-03-12/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-07-40/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-08-21/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-11-27/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-17-24/.hydra/: config.yaml  hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-28-42/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-33-21/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-47-37/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-51-03/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/14-51-33/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-10-50/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-11-23/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-11-52/.hydra/: config.yaml  hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-15-26/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-17-08/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-27-36/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-28-44/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-29-15/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-29-55/.hydra/: hydra.yaml
human-robot-gym-deployment/outputs/2023-05-19/15-30-58/.hydra/: hydra.yaml
human-robot-gym-deployment/src/: minimal_publisher.py  minimal_publisher_json.py  minimal_publisher_udp.py
human-robot-gym-deployment/transformation_pipeline/: README.md  requirements.txt  transformationPipeline.py
human-robot-gym-deployment/transformation_pipeline/motion_capture/: config.yaml  config_util.py
human-robot-gym-deployment/transformation_pipeline/motion_capture/converters/: README.md  convert_bvh.py  viconCSV_to_bvh.py
human-robot-gym-deployment/transformation_pipeline/motion_capture/dataset/: .gitignore
human-robot-gym-deployment/transformation_pipeline/motion_capture/help_scripts/: README.md  angle_estimation.py  postprocess_data.py  renameCSVitems.py
human-robot-gym-deployment/transformation_pipeline/motion_capture/readers/: readViconCSV.py
safety_demo/: .gitignore  error_log.txt
safety_demo/docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
safety_demo/src/human_motion_tracker/: package.xml  setup.cfg  setup.py
safety_demo/src/human_motion_tracker/communi_cat/: client_cat.py  config_cat.py
safety_demo/src/human_motion_tracker/human_motion_tracker/: human_motion_tracker.py  human_motion_tracker_debug.py  human_motion_tracker_json.py  human_motion_tracker_logs.py  motion_replay.py
safety_demo/src/safety_shield_node/: CMakeLists.txt  package.xml
safety_demo/src/safety_shield_node/config/: robot_parameters_robco.yaml  safety_shield_params.yaml  safety_shield_params_panda.yaml  safety_shield_params_robco.yaml  trajectory_parameters_robco.yaml
safety_demo/src/safety_shield_node/launch/: rviz.launch.py  safety.launch.py  safety.launch_panda.py  safety.launch_robco.py
safety_demo/src/safety_shield_node/rviz/: safety_shield.rviz
safety_demo/src/safety_shield_node/scripts/: state_logger.py
safety_demo/src/safety_shield_node/src/: safety_shield_node.cpp
safety_demo/src/simple_goal_publisher/: package.xml  setup.cfg  setup.py
safety_demo/src/simple_goal_publisher/simple_goal_publisher/: simple_goal_publisher.py  simple_goal_publisher_panda.py
safety_demo/utils/: plot_state.py
(+71 files in other folders)
